<?xml version="1.0"?>
<package format="3">
  <name>dynamixel_gripper_ros2</name>
  <version>0.0.0</version>
  <description>Package containing examples of how to use the DYNAMIXEL ROS 2 API.</description>
  <maintainer email="yongkeat.poh@hopetechnik.com">Poh Yong Keat</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_copyright</buildtool_depend>
  <buildtool_depend>ament_pep257</buildtool_depend>
  <buildtool_depend>ament_pep8</buildtool_depend>
  <buildtool_depend>ament_pyflakes</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
