<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>patient_device</name>
  <version>0.0.1</version>
  <description>patient_device</description>

  <maintainer email="pallavi.koty@hopetechnik.com">pallavikoty</maintainer>

  <license>Apache License 2.0</license>

  <author>Pallavi Gururaj Koty</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>hope_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>bcm2835</build_depend>
  <build_depend>builtin_interfaces</build_depend>
 
  <exec_depend>hope_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>bcm2835</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
